--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
               </ul>
               
               <form class="d-flex" role="search">
-                <button class="btn btn-outline-danger btn-danger" style="color: white; font-weight: bold;" type="submit">Donate Us</button>
+                <button class="btn btn-outline-danger btn-danger" style="color: white; font-weight: bold;" type="submit">Donate Now</button>
                 
               </form>
             </div>
